# program-risk-board

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: risks.json
docs/: README.md  project_plan.md  risk_review_process.md
reports/: risk-dashboard.html  risk-gate-matrix.csv  risk-register.csv  risk-summary.md
src/program_risk_board/: __init__.py  analysis.py  cli.py  data.py  export.py
tests/: test_analysis.py
